--- a/repo/service/trunk/editor/editor-app/pom.xml
+++ b/repo/service/trunk/editor/editor-app/pom.xml
@@ -102,31 +102,22 @@
         </dependency> 
 
 
-        <dependency>
-            <groupId>antlr</groupId>
-            <artifactId>antlr</artifactId>
-            <version>2.7.5</version>
-        </dependency>
-
+        <!--Third party deps -->
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
             <version>3.0.1</version>
-            <!--<version>2.0</version>-->
         </dependency>
-
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.3</version>
         </dependency>
-
         <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
             <version>1.1</version>
         </dependency>
-
         <dependency>
             <groupId>concurrent</groupId>
             <artifactId>concurrent</artifactId>
@@ -166,7 +157,6 @@
             <scope>provided</scope>
         </dependency>
 
-
         <!-- Test dependencies -->
         <dependency>
             <groupId>strutstestcase</groupId>
@@ -174,12 +164,6 @@
             <version>2.1.2-1.1-2.3</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>2.0.5</version>
-        </dependency>
-
     </dependencies>
 
     <!-- EBI repositories -->
