--- a/repo/service/trunk/search/binary/binary-webservice/ws/pom.xml
+++ b/repo/service/trunk/search/binary/binary-webservice/ws/pom.xml
@@ -16,14 +16,8 @@
     <description>A web service interface to retrieve data from intact</description>
 
     <build>
-        <finalName>${artifactId}-${version}</finalName>
-        <plugins>   <!--
-            <plugin>
-                <groupId>uk.ac.ebi.intact.commons</groupId>
-                <artifactId>hibernateconfig-maven-plugin</artifactId>
-                <version>2.1.0</version>
-            </plugin>
-            -->
+        <finalName>intact-binary-search-ws-${buildNumber}</finalName>
+        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -78,19 +72,6 @@
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <!--<groupId>psidev.psi.mi</groupId>-->
-            <!--<artifactId>psimitab-search</artifactId>-->
-            <!--<version>1.2.2</version>-->
-            <exclusions>
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <!-- JAX-WS -->
