--- a/repo/service/trunk/search/binary/binary-webservice/ws/src/main/resources/log4j.properties
+++ b/repo/service/trunk/search/binary/binary-webservice/ws/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 
-log4j.rootCategory=INFO, A
+log4j.rootCategory=WARN, A
 
 log4j.category.uk.ac.ebi.intact=DEBUG
 log4j.category.uk.ac.ebi.intact.persistence.util=INFO
