--- a/repo/bridges/trunk/coredep/pom.xml
+++ b/repo/bridges/trunk/coredep/pom.xml
@@ -35,7 +35,7 @@
              <dependency>
                 <groupId>uk.ac.ebi.intact.core</groupId>
                 <artifactId>intact-persister</artifactId>
-                <version>1.7.1</version>
+                <version>1.7.2-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
