--- a/repo/service/trunk/editor/editor-app/pom.xml
+++ b/repo/service/trunk/editor/editor-app/pom.xml
@@ -19,6 +19,8 @@
 
     <properties>
         <jetty.port>9090</jetty.port>
+        <jetty.context>editor</jetty.context>
+
         <maven.test.skip>true</maven.test.skip>
         <db.connectionProviderClass>uk.ac.ebi.intact.application.editor.hibernate.EditorConnectionProvider
         </db.connectionProviderClass>
