--- a/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/src/test/resources/log4j.properties
@@ -1,8 +1,8 @@
-log4j.rootCategory=DEBUG, A
+log4j.rootCategory=INFO, A
 
 log4j.category.psidev.psi.mi.xml=ERROR
 log4j.category.psidev.psi.mi.tab=ERROR
-log4j.category.psidev.psi.mi.tab.client=DEBUG
+log4j.category.psidev.psi.mi.tab.client=INFO
 log4j.category.psidev.psi.mi.tab.expansion=ERROR
 
 
