--- a/legacy/branches/bruno-work/psi-validator-app/trunk/pom.xml
+++ b/legacy/branches/bruno-work/psi-validator-app/trunk/pom.xml
@@ -7,7 +7,7 @@
     <groupId>uk.ac.ebi.imex</groupId>
     <artifactId>psi-validator-app</artifactId>
     <packaging>war</packaging>
-    <version>1.1.0</version>
+    <version>1.2.0-SNAPSHOT</version>
     <!-- last released 1.1.0 -->
     <name>PSI Validator Webapp</name>
     <url>http://www.ebi.ac.uk/intact/psivalidator</url>
@@ -42,200 +42,6 @@
         </developer>
     </developers>
 
-    <!-- Profile to run jetty, so the tomcat jars are included in the bundle. They are not included by default -->
-    <profiles>
-        <profile>
-            <id>jettyConfig</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.mortbay.jetty</groupId>
-                        <artifactId>maven-jetty6-plugin</artifactId>
-                        <configuration>
-                            <contextPath>psivalidator</contextPath>
-                            <scanIntervalSeconds>10</scanIntervalSeconds>
-                        </configuration>
-                        <dependencies>
-                            <dependency>
-                                <groupId>commons-logging</groupId>
-                                <artifactId>commons-logging</artifactId>
-                                <version>1.0.4</version>
-                            </dependency>
-                            <dependency>
-                                <groupId>log4j</groupId>
-                                <artifactId>log4j</artifactId>
-                                <version>1.2.13</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
-                </plugins>
-            </build>
-
-            <dependencies>
-                <dependency>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>jsp-api</artifactId>
-                    <version>2.0</version>
-                    <scope>compile</scope>
-                </dependency>
-                <dependency>
-                    <groupId>tomcat</groupId>
-                    <artifactId>jasper-compiler</artifactId>
-                    <version>5.5.9</version>
-                    <scope>compile</scope>
-                </dependency>
-                <dependency>
-                    <groupId>tomcat</groupId>
-                    <artifactId>jasper-runtime</artifactId>
-                    <version>5.5.9</version>
-                    <scope>compile</scope>
-                </dependency>
-                <dependency>
-                    <groupId>tomcat</groupId>
-                    <artifactId>jasper-compiler-jdt</artifactId>
-                    <version>5.5.9</version>
-                    <scope>compile</scope>
-                </dependency>
-            </dependencies>
-
-            <pluginRepositories>
-                <!-- Repository to get the jetty plugin -->
-                <pluginRepository>
-                    <id>mortbay-repo</id>
-                    <name>mortbay-repo</name>
-                    <url>http://www.mortbay.org/maven2/snapshot</url>
-                </pluginRepository>
-            </pluginRepositories>
-
-        </profile>
-
-        <profile>
-            <id>tomcat-4.1</id>
-            <activation>
-                <property>
-                    <name>tomcat</name>
-                    <value>4.1</value>
-                </property>
-            </activation>
-
-            <build>
-                <finalName>${artifactId}-T41-${version}</finalName>
-
-            </build>
-
-            <dependencies>
-                <dependency>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>jstl</artifactId>
-                    <version>1.0</version>
-                </dependency>
-                <dependency>
-                    <groupId>taglibs</groupId>
-                    <artifactId>standard</artifactId>
-                    <version>1.0</version>
-                </dependency>
-                <dependency>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>jsp-api</artifactId>
-                    <version>2.0</version>
-                </dependency>
-            </dependencies>
-
-        </profile>
-    </profiles>
-
-    <repositories>
-         <repository>
-            <id>ibiblio</id>
-            <name>Ibiblio repository</name>
-            <url>http://www.ibiblio.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-             <snapshots>
-                 <enabled>false</enabled>
-             </snapshots>
-        </repository>
-        <repository>
-            <id>ebi-repo</id>
-            <name>The EBI internal repository</name>
-            <url>http://www.ebi.ac.uk/~maven/m2repo</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-             <snapshots>
-                 <enabled>false</enabled>
-             </snapshots>
-        </repository>
-        <repository>
-            <id>apache-maven-snapshots</id>
-            <url>http://cvs.apache.org/maven-snapshot-repository</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-             <snapshots>
-                 <enabled>true</enabled>
-             </snapshots>
-        </repository>
-    </repositories>
-
-
-    <!-- Project dependencies -->
-    <dependencies>
-        <dependency>
-            <groupId>uk.ac.ebi</groupId>
-            <artifactId>psi-schema-validator</artifactId>
-            <version>0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>uk.ac.ebi.intact.tools</groupId>
-            <artifactId>intact-psi-validator</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.myfaces.core</groupId>
-            <artifactId>myfaces-api</artifactId>
-            <version>1.1.4-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.myfaces.core</groupId>
-            <artifactId>myfaces-impl</artifactId>
-            <version>1.1.4-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.myfaces.tomahawk</groupId>
-            <artifactId>tomahawk</artifactId>
-            <version>1.1.4-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jsp-api</artifactId>
-            <version>2.0</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.3</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.2</version>
-            <scope>test</scope>
-        </dependency>
-
-    </dependencies>
-
     <build>
         <resources>
             <resource>
@@ -253,8 +59,152 @@
                     <target>1.5</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>maven-jetty-plugin</artifactId>
+                <configuration>
+                    <connectors>
+                        <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+                            <port>8181</port>
+                        </connector>
+                    </connectors>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <contextPath>intact/validator</contextPath>
+
+                    <requestLog implementation="org.mortbay.jetty.NCSARequestLog">
+                        <filename>target/yyyy_mm_dd.request.log</filename>
+                        <retainDays>90</retainDays>
+                        <append>true</append>
+                        <extended>false</extended>
+                        <logTimeZone>GMT</logTimeZone>
+                    </requestLog>
+
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+
+
+    <!-- Project dependencies -->
+    <dependencies>
+        <dependency>
+            <groupId>uk.ac.ebi</groupId>
+            <artifactId>psi-schema-validator</artifactId>
+            <version>0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.intact.tools</groupId>
+            <artifactId>intact-psi-validator</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.myfaces.core</groupId>
+            <artifactId>myfaces-api</artifactId>
+            <version>1.1.5</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.myfaces.core</groupId>
+            <artifactId>myfaces-impl</artifactId>
+            <version>1.1.5</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.tomahawk</groupId>
+            <artifactId>tomahawk</artifactId>
+            <version>1.1.6</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.tomahawk</groupId>
+            <artifactId>tomahawk-facelets</artifactId>
+            <version>1.1.6.1</version>
+        </dependency>
+
+         <dependency>
+            <groupId>com.sun.facelets</groupId>
+            <artifactId>jsf-facelets</artifactId>
+            <version>1.1.14</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>el-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.el</groupId>
+            <artifactId>el-ri</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+
+        <!-- server -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.4</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.3.1</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+
+    <repositories>
+        <repository>
+            <id>java.net</id>
+            <url>http://download.java.net/maven/1</url>
+            <layout>legacy</layout>
+        </repository>
+
+        <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>http://download.java.net/maven/2/</url>
+        </repository>
+
+        <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>https://maven2-repository.dev.java.net/nonav/repository</url>
+        </repository>
+        <repository>
+            <id>apache.snapshots</id>
+            <name>Apache Snapshot Repository</name>
+            <url>http://people.apache.org/repo/m2-snapshot-repository</url>
+        </repository>
+
+    </repositories>
+
+
 
      <distributionManagement>
         <repository>
