--- a/repo/site/trunk/intact-site/pom.xml
+++ b/repo/site/trunk/intact-site/pom.xml
@@ -31,19 +31,59 @@
 
         <jetty.port>9190</jetty.port>
         <jetty.context>site</jetty.context>
+
+        <appRoot>/intact</appRoot>
     </properties>
 
     <build>
-        <finalName>intact-site-${buildNumber}</finalName>
+        <finalName>${pom.artifactId}-${buildNumber}</finalName>
 
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
+            <resource>
+                <directory>src/main/webapp-filtered</directory>
+                <filtering>true</filtering>
+                <targetPath>../../src/main/webapp</targetPath>
+            </resource>
         </resources>
 
         <plugins>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-war-plugin</artifactId>-->
+                <!--<version>2.0</version>-->
+                <!--<configuration>-->
+                    <!--<webResources>-->
+                        <!--<resource>-->
+                            <!--<directory>${project.build.directory}/classes/</directory>-->
+                            <!--<filtering>false</filtering>-->
+                        <!--</resource>-->
+                    <!--</webResources>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+
+            <!--<plugin>-->
+        <!--<groupId>org.codehaus.mojo</groupId>-->
+        <!--<artifactId>build-helper-maven-plugin</artifactId>-->
+        <!--<executions>-->
+          <!--<execution>-->
+            <!--<id>add-source</id>-->
+            <!--<phase>generate-sources</phase>-->
+            <!--<goals>-->
+              <!--<goal>add-source</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+              <!--<sources>-->
+                <!--<source>${project.build.directory}/filtered</source>-->
+              <!--</sources>-->
+            <!--</configuration>-->
+          <!--</execution>-->
+        <!--</executions>-->
+      <!--</plugin>-->
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>maven-buildnumber-plugin</artifactId>
@@ -65,13 +105,14 @@
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>maven-jetty-plugin</artifactId>
                 <configuration>
+                    <!--<webXml>${project.build.directory}/filtered/WEB-INF/web.xml</webXml>-->
                     <connectors>
                         <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
                             <port>${jetty.port}</port>
                         </connector>
                     </connectors>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
-                    <contextPath>intact/${jetty.context}</contextPath>
+                    <contextPath>${appRoot}/${jetty.context}</contextPath>
 
                     <requestLog implementation="org.mortbay.jetty.NCSARequestLog">
                         <filename>target/yyyy_mm_dd.request.log</filename>
@@ -80,7 +121,7 @@
                         <extended>false</extended>
                         <logTimeZone>GMT</logTimeZone>
                     </requestLog>
- 
+
                 </configuration>
             </plugin>
             <plugin>
@@ -171,7 +212,7 @@
         <dependency>
             <groupId>uk.ac.ebi.faces</groupId>
             <artifactId>ebifaces-core</artifactId>
-            <version>1.2.4</version>
+            <version>1.3.0</version>
         </dependency>
 
         <dependency>
@@ -189,14 +230,14 @@
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
-            <version>1.1.5</version>
+            <version>1.2.2</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-impl</artifactId>
-            <version>1.1.5</version>
+            <version>1.2.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -217,18 +258,6 @@
             <groupId>com.sun.facelets</groupId>
             <artifactId>jsf-facelets</artifactId>
             <version>1.1.14</version>
-        </dependency>
-       
-        <dependency>
-            <groupId>javax.el</groupId>
-            <artifactId>el-api</artifactId>
-            <version>1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sun.el</groupId>
-            <artifactId>el-ri</artifactId>
-            <version>1.0</version>
         </dependency>
 
         <dependency>
@@ -266,13 +295,13 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>2.4</version>
+            <version>2.5</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
+            <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
-            <version>2.0</version>
+            <version>2.1</version>
             <scope>provided</scope>
         </dependency>
 
