--- a/repo/site/trunk/intact-site/src/main/webapp-filtered/WEB-INF/web.xml
+++ b/repo/site/trunk/intact-site/src/main/webapp-filtered/WEB-INF/web.xml
@@ -1,15 +1,38 @@
-<?xml version="1.0"?>
-
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
+<?xml version = '1.0' encoding = 'ISO-8859-1'?>
+<!--
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or impliedor.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+-->
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-         version="2.4">
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         metadata-complete="false"
+         version="2.5">
 
     <description>Intact Site</description>
 
     <distributable/>
-
+    
     <!-- intact specific params -->
+    <context-param>
+        <param-name>intact.APPLICATION_ROOT</param-name>
+        <param-value>${appRoot}</param-value>
+    </context-param>
+
     <context-param>
         <description>
             Where to find the Dataset of the Month XML file
@@ -24,7 +47,7 @@
             URL to do a search query
         </description>
         <param-name>uk.ac.ebi.intact.SEARCH_QUERY_URL</param-name>
-        <param-value>http://www.ebi.ac.uk/intact/binary-search/faces/search.xhtml?query=</param-value>
+        <param-value>${appRoot}/binary-search/faces/search.xhtml?query=</param-value>
     </context-param>
 
     <context-param>
@@ -46,14 +69,14 @@
             Where to find the Menu XML file
         </description>
         <param-name>uk.ac.ebi.faces.MENU_URL</param-name>
-        <param-value>http://www.ebi.ac.uk/~intact/site/menu/menu-current.xml</param-value>
+        <param-value>http://www.ebi.ac.uk/~intact/site/menu/menu-latest.xml</param-value>
     </context-param>
      <context-param>
         <description>
             Where to find the News XML file
         </description>
         <param-name>uk.ac.ebi.faces.NEWS_URL</param-name>
-        <param-value>http://www.ebi.ac.uk/~intact/site/news/news-1.2.xml</param-value>
+        <param-value>http://www.ebi.ac.uk/~intact/site/news/news-latest.xml</param-value>
     </context-param>
     <context-param>
         <description>
@@ -67,7 +90,7 @@
             WSDL URL for the Search WS
         </description>
         <param-name>uk.ac.ebi.intact.SEARCH_WS_URL</param-name>
-        <param-value>http://www.ebi.ac.uk/intact/search-ws/search?wsdl</param-value>
+        <param-value>search-ws/search?wsdl</param-value>
     </context-param>
 
     <!-- JSF (MyFaces) Params... -->
