--- a/repo/data-exchange/trunk/pom.xml
+++ b/repo/data-exchange/trunk/pom.xml
@@ -20,7 +20,7 @@
 
     <properties>
         <currentVersion>${version}</currentVersion>
-        <version.core>1.8.1-SNAPSHOT</version.core>
+        <version.core>1.8.1</version.core>
     </properties>
 
     <scm>
