--- a/repo/data-exchange/trunk/psimi/psimitab/intact-interolog-prediction/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-interolog-prediction/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>psidev.psi.mi</groupId>
             <artifactId>psimitab</artifactId>
-            <!-- <version>1.5.0-SNAPSHOT</version> -->
+            <version>1.5.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
