--- a/repo/commons/trunk/intact-commons/pom.xml
+++ b/repo/commons/trunk/intact-commons/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>log4j</artifactId>
         </dependency>
         <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
         </dependency>
