--- a/repo/service/branches/editor-1.7.0-beta-2-SNAPSHOT/editor-app/pom.xml
+++ b/repo/service/branches/editor-1.7.0-beta-2-SNAPSHOT/editor-app/pom.xml
@@ -91,13 +91,13 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.bridges.coredep</groupId>
             <artifactId>intact-cdb</artifactId>
-            <version>2.0.1-SNAPSHOT</version>
+            <version>2.0.1</version>
         </dependency>
 
         <dependency>
-            <groupId>uk.ac.ebi.intact.bridges.coredep</groupId>
+            <groupId>uk.ac.ebi.intact.bridges</groupId>
             <artifactId>intact-go</artifactId>
-            <version>2.0</version>
+            <version>2.0.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
