--- a/repo/bridges/trunk/coredep/pom.xml
+++ b/repo/bridges/trunk/coredep/pom.xml
@@ -29,4 +29,18 @@
         </dependency>
      </dependencies>
 
+    <repositories>
+       <repository>
+            <id>jboss</id>
+            <name>JBoss Repository</name>
+            <url>http://repository.jboss.com/maven2/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
+
 </project>
