--- a/repo/maven/trunk/master-hibernate-pom/pom.xml
+++ b/repo/maven/trunk/master-hibernate-pom/pom.xml
@@ -205,6 +205,12 @@
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
+            <artifactId>hibernate</artifactId>
+            <version>3.2.6.ga</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>3.3.2.GA</version>
         </dependency>
