--- a/repo/maven-plugins/psixml-generator-maven-plugin/trunk/pom.xml
+++ b/repo/maven-plugins/psixml-generator-maven-plugin/trunk/pom.xml
@@ -26,6 +26,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>uk.ac.ebi.intact.core</groupId>
+            <artifactId>intact-core</artifactId>
+            <version>1.8.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi.legacy</groupId>
             <artifactId>data-conversion</artifactId>
             <version>2.0.0-SNAPSHOT</version>
